# integral_image

./: CMakeLists.txt  Image.cu  Image.cuh  Image.h  ImageController.cu  ImageController.cuh  IntegralGenerator.cu  IntegralGenerator.cuh  IntegralGeneratorPar.cu  IntegralGeneratorPar.cuh  IntegralGeneratorSeq.cu  IntegralGeneratorSeq.cuh  README.md  main.cu
integral_image_cuda/: CMakeLists.txt  ImageControllerGPU.cu  ImageControllerGPU.cuh  IntegralGeneratorPar.cu  IntegralGeneratorPar.cuh  IntegralGeneratorSeq.cuh  main.cu
integral_image_omp/: CMakeLists.txt  Image.h  ImageController.cpp  ImageController.h  IntegralGeneratorOMP.cpp  IntegralGeneratorOMP.h  main.cpp
intelgral_image_cuda/: CMakeLists.txt  IntegralGeneratorPar.cuh  IntegralGeneratorSeq.cu
report/: integral_image.tex
report/test/: graphics.py  test1_cuda.csv  test1_omp.csv  tests.py
report/test/gridTest/size10/: result.csv
report/test/gridTest/size100/: result.csv
report/test/gridTest/size1000/: result.csv
